[package]
name = "grinbox"
version = "0.1.0"
authors = ["vault713 devs"]
description = "A slate relay service for Grin."
keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency", "wallet713", "vault713" ]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2.31"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
toml = "0.4"
log = "0.4"
env_logger = "0.6"
ws = "0.7"
futures = "0.1"
nitox = "0.1"
tokio = "0.1"
tokio-core = "0.1.17"
rand = "0.4"
secp256k1 = { version="0.11", features=["rand"] }
sha2 = "0.8.0"
digest = "0.7"
colored = "1.6"
lapin-futures = "^0.14"
regex = "1"